# -oracle-forge-data-agent

./: .env.example  .gitignore  Dockerfile.sandbox  README.md  agent_server.py  design.md  ecosystem_report_week8.md  pyproject.toml  run_agent.py  setup_dab.sh  start_agent_server.sh  task.md  toolbox
agent/: AGENT.md  agentic_loop.py  config_manager.py  context_manager.py  duckdb_mcp_server.py  execution_engine.py  llm_client.py  mcp_client.py  mcp_toolbox.py  oracle_forge_agent.py  query_router.py  requirements.txt  sandbox_client.py  self_correction.py  types.py
eval/: README.md  baseline.json  baseline_test.json  bookreview_litfic_perfect5_proxy_baseline.json  bookreview_litfic_perfect5_proxy_questions.json  bookreview_price_top5_baseline.json  bookreview_price_top5_baseline_configured.json  bookreview_price_top5_questions.json  build_baseline.py  harness.py  run_benchmark.py  score.py  score_log.json  trace_log.jsonl  yelp_baseline.json  yelp_baseline_questions.json
kb/: CHANGELOG.md
mcp/: MANUAL.md  README.md  tools.yaml
my_query_run/: db_description_with_hint.txt
planning/: inception.md
probes/: adversarial_probes.md
query_bookreview_benchmark/: db_config.yaml  db_description.txt
scripts/: main.py  run_bookreview_query.py  setup_dab.sh
signal/: communitylog.md  engagmentlog.md
signals/: engagmentlog.md
tests/: test_execution_engine.py  test_sandbox_client.py
utils/: README.md  __init__.py  join_key_resolver.py  multi_pass_retrieval.py  schema_introspector.py  util_join_key_resolver.py  util_retrieval.py  util_schema_introspect.py  (+2 more)
(+88 files in other folders)
